--- a/package.json
+++ b/package.json
@@ -1,78 +1,84 @@
 {
   "name": "@krivega/cancelable-promise",
+  "version": "0.1.1",
   "description": "Cancelable abstraction over promise",
   "keywords": [
     "promise"
   ],
-  "version": "0.1.1",
-  "author": {
-    "name": "Krivega Dmitriy",
-    "email": "mr.krivega@gmail.com",
-    "url": "https://krivega.com"
+  "bugs": {
+    "url": "https://github.com/Krivega/cancelable-promise/issues"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Krivega/cancelable-promise.git"
   },
-  "bugs": {
-    "url": "https://github.com/Krivega/cancelable-promise/issues"
-  },
   "license": "MIT",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "main:src": "src/index.js",
+  "author": {
+    "name": "Krivega Dmitriy",
+    "email": "mr.krivega@gmail.com",
+    "url": "https://krivega.com"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     },
-    "./cancelablePromise": {
-      "import": "./dist/cancelablePromise.mjs",
-      "require": "./dist/cancelablePromise.js"
-    },
     "./CancelableRequest": {
       "import": "./dist/CancelableRequest.mjs",
       "require": "./dist/CancelableRequest.js"
+    },
+    "./cancelablePromise": {
+      "import": "./dist/cancelablePromise.mjs",
+      "require": "./dist/cancelablePromise.js"
     }
   },
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "typings": "dist/types/index.d.ts",
   "files": [
     "dist/**/*",
     "README.md"
   ],
-  "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.6",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "^25.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.8.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.3",
-    "husky": "^4.2.3",
-    "jest": "25.2.4",
-    "lint-staged": "^10.0.8",
-    "prettier": "^2.0.2",
-    "rollup": "^2.3.1",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-terser": "^5.2.0",
-    "standard-version": "^7.1.0"
-  },
   "scripts": {
-    "lint": "eslint src/. --ext .js",
-    "format": "prettier --write \"src/**/*.js\"",
-    "test": "jest",
     "build": "NODE_ENV=production rollup --config",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint src/. --ext .ts",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
-    "release": "standard-version"
+    "release": "standard-version",
+    "test": "jest"
   },
+  "dependencies": {
+    "typescript": "^4.2.3"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
+    "@types/jest": "^26.0.21",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "12.3.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.0",
+    "husky": "^5.2.0",
+    "jest": "26.6.3",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "rollup": "^2.42.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "0.30.0",
+    "standard-version": "^9.1.1",
+    "ts-jest": "^26.5.4"
+  },
+  "main:src": "src/index.ts",
   "standard-version": {
     "scripts": {
       "prerelease": "npm run lint && CI=true npm test",
