--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "email": "mr.krivega@gmail.com",
     "url": "https://krivega.com"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "main": "dist/index.umd.js",
+  "module": "dist/index.es5.js",
   "typings": "dist/types/index.d.ts",
   "files": [
     "dist"
@@ -55,7 +55,7 @@
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.23.0",
+    "eslint-plugin-react": "^7.23.1",
     "husky": "^5.2.0",
     "jest": "26.6.3",
     "lint-staged": "^10.5.4",
