--- a/package.json
+++ b/package.json
@@ -36,9 +36,6 @@
     "release": "standard-version",
     "test": "jest"
   },
-  "dependencies": {
-    "typescript": "^4.2.3"
-  },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
@@ -64,7 +61,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "0.30.0",
     "standard-version": "^9.1.1",
-    "ts-jest": "^26.5.4"
+    "ts-jest": "^26.5.4",
+    "typescript": "^4.2.3"
   },
   "main:src": "src/index.ts",
   "standard-version": {
