--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
     "sourceType": "module",
     "tsconfigRootDir": "."
   },
-  "extends": ["plugin:jest/recommended", "airbnb", "airbnb-typescript", "prettier"],
+  "extends": ["plugin:jest/recommended", "airbnb-base", "airbnb-typescript/base", "prettier"],
   "plugins": ["jest", "prettier", "@typescript-eslint"],
   "env": {
     "browser": true
@@ -60,6 +60,7 @@
     "prettier/prettier": "error", // approved
     "no-underscore-dangle": "off", // approved
     "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }], // approved
-    "jest/no-mocks-import": "off" // approved
+    "jest/no-mocks-import": "off", // approved
+    "jest/no-conditional-expect": "off" // approved
   }
 }
