--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "email": "mr.krivega@gmail.com",
     "url": "https://krivega.com"
   },
+  "type": "module",
   "main": "dist/index.umd.js",
   "module": "dist/index.es5.js",
   "typings": "dist/index.d.ts",
@@ -37,28 +38,28 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
-    "@types/jest": "^28.1.4",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "eslint": "^8.19.0",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@types/jest": "^29.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.5.3",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.1",
-    "jest": "28.1.2",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "rollup": "^2.75.7",
+    "husky": "^8.0.3",
+    "jest": "29.5.0",
+    "lint-staged": "^13.2.0",
+    "prettier": "^2.8.4",
+    "rollup": "^3.19.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "0.32.1",
+    "rollup-plugin-typescript2": "0.34.1",
     "standard-version": "^9.5.0",
-    "ts-jest": "^28.0.5",
-    "typescript": "^4.7.4"
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   },
   "main:src": "src/index.ts",
   "standard-version": {
