--- a/.npmignore
+++ b/.npmignore
@@ -24,7 +24,7 @@ coverage
 
 # nyc test coverage
 .nyc_output
-
+.DS_Store
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
