--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Krivega/cancelable-promise.git"
+    "url": "git+https://github.com/Krivega/cancelable-promise.git"
   },
   "license": "MIT",
   "author": {
@@ -19,53 +19,68 @@
     "url": "https://krivega.com"
   },
   "type": "module",
-  "main": "dist/index.umd.js",
-  "module": "dist/index.es5.js",
-  "typings": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.js"
+    }
+  },
+  "main": "./dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "yarn build:ts && yarn build:js",
-    "build:js": "NODE_ENV=production rollup --config",
-    "build:ts": "tsc --build tsconfig.build.json",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint src/. --ext .ts",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
-    "release": "standard-version",
-    "test": "jest"
+    "build": "vite build",
+    "lint": "yarn lint:js && yarn lint:ts",
+    "lint:js": "eslint src --ext ts,tsx --ignore-path .gitignore --report-unused-disable-directives --max-warnings 0",
+    "lint:ts": "tsc",
+    "prepare": "husky install",
+    "prepublishOnly": "yarn build",
+    "preview": "vite preview",
+    "release": "standard-version && yarn release:publish",
+    "release:major": "standard-version --release-as major && yarn release:publish",
+    "release:pre": "standard-version --prerelease && yarn release:publish",
+    "release:publish": "git push --follow-tags origin main",
+    "test": "jest --watch",
+    "test:ci": "cross-env CI=true jest --passWithNoTests",
+    "test:coverage": "yarn test:ci --coverage --reporters=default --reporters=jest-junit"
   },
+  "dependencies": {},
   "devDependencies": {
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@types/jest": "^29.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "eslint": "^8.36.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-prettier": "^4.2.1",
+    "@babel/preset-typescript": "^7.23.2",
+    "@commitlint/cli": "^18.0.0",
+    "@commitlint/config-conventional": "^18.0.0",
+    "@nabla/vite-plugin-eslint": "^1.5.0",
+    "@types/jest": "^29.5.6",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.52.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.4.3",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-unicorn": "^48.0.1",
     "husky": "^8.0.3",
-    "jest": "29.5.0",
-    "lint-staged": "^13.2.0",
-    "prettier": "^2.8.4",
-    "rollup": "^3.19.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "0.34.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-extended": "^4.0.2",
+    "jest-junit": "^16.0.0",
+    "lint-staged": "^15.0.2",
+    "prettier": "^3.0.3",
     "standard-version": "^9.5.0",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "tsc-files": "^1.1.4",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
+    "vite-plugin-dts": "^3.6.0",
+    "vite-tsconfig-paths": "^4.2.1"
   },
-  "main:src": "src/index.ts",
-  "standard-version": {
-    "scripts": {
-      "prerelease": "npm run lint && CI=true npm test",
-      "postchangelog": "prettier --write \"CHANGELOG.md\""
-    }
-  }
+  "peerDependencies": {}
 }
