--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
   ],
   "scripts": {
     "build": "vite build",
-    "lint": "yarn lint:js && yarn lint:ts",
+    "lint": "yarn lint:ts && yarn lint:js",
     "lint:js": "eslint src --ext ts,tsx --ignore-path .gitignore --report-unused-disable-directives --max-warnings 0",
     "lint:ts": "tsc",
-    "prepare": "husky install",
+    "prepare": "husky",
     "prepublishOnly": "yarn build",
     "preview": "vite preview",
     "release": "standard-version && yarn release:publish",
@@ -48,39 +48,39 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/preset-typescript": "^7.23.2",
-    "@commitlint/cli": "^18.0.0",
-    "@commitlint/config-conventional": "^18.0.0",
-    "@nabla/vite-plugin-eslint": "^1.5.0",
-    "@types/jest": "^29.5.6",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
+    "@babel/preset-typescript": "^7.24.1",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@nabla/vite-plugin-eslint": "^2.0.4",
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.52.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jest": "^27.4.3",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-unicorn": "^48.0.1",
-    "husky": "^8.0.3",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^28.5.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-unicorn": "^53.0.0",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-extended": "^4.0.2",
     "jest-junit": "^16.0.0",
-    "lint-staged": "^15.0.2",
-    "prettier": "^3.0.3",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
     "standard-version": "^9.5.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "tsc-files": "^1.1.4",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vite-plugin-dts": "^3.6.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
+    "vite-plugin-dts": "^3.9.1",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "peerDependencies": {}
 }
