--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "import": "./dist/index.js"
     }
   },
+  "main": "./dist/index.cjs",
   "types": "dist/index.d.ts",
   "typesVersions": {
     "*": {
@@ -62,8 +63,8 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@nabla/vite-plugin-eslint": "^2.0.4",
     "@types/jest": "^29.5.12",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.52.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -83,7 +84,7 @@
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "standard-version": "^9.5.0",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.1.3",
     "ts-node": "^10.9.2",
     "tsc-files": "^1.1.4",
     "typescript": "^5.4.5",
